# docs/swagger.yaml
@@ -35,6 +35,13 @@ definitions:
       message:
         type: string
     type: object
+  handler.ShowOpeningResponse:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.OpeningResponse'
+      message:
+        type: string
+    type: object
   schemas.OpeningResponse:
     properties:
       company:
@@ -95,7 +102,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Delete a new job opening
+      description: Delete a job opening
       parameters:
       - description: Opening identification
         in: path
@@ -118,6 +125,34 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: Delete opening
+      tags:
+      - Opening
+    get:
+      consumes:
+      - application/json
+      description: Show a job opening
+      parameters:
+      - description: Opening identification
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ShowOpeningResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Show opening
       tags:
       - Opening
 swagger: "2.0"
